--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="graficos/informaçoesGlobais.js" defer></script>
     <script src="graficos/quantidadeUsuarios.js" defer></script>
     <script src="graficos/objetivosUsuarios.js" defer></script>
+    <script src="graficos/redesFavoritasMundo.js" defer></script>
 </head>
 <body>
     <header>
