--- a/index.html
+++ b/index.html
@@ -3,31 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes Sociais</title>
+    <title>Redes Sociais - Mundo</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
-
-    <script src="graficos/commom.js" defer></script>
-    <script src="graficos/informaçoesGlobais.js" defer></script>
-    <script src="graficos/quantidadeUsuarios.js" defer></script>
-    <script src="graficos/redesFavoritasMundo.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Relatório das Redes Sociais</h1>
+        <h1>Relatório das redes sociais</h1>
         <nav>
-            <a href="index.html"> Mundo </a>
-            <a href="#"> Minha Escola</a>
+            <a href="index.html">Mundo</a>
+            <a href="minha-escola.html">Minha escola</a>
         </nav>
     </header>
     <main class="graficos-section">
-         <section id="graficos-container"
-         class="graficos-container">
-              <!-- crie os graficos aqui -->
+        <section id="graficos-container" class="graficos-container">
+            <!-- crie os gráficos/texto aqui -->
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Estéfany Brancher</p>
+        <p>Desenvolvido por Gui Lima</p>
     </footer>
+    <script type="module" src="graficos/common.js"></script>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
+    <script type="module" src="graficos/redesFavoritasMundo.js"></script>
 </body>
 </html>
